# life-log-app

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
docs/: DECISIONS.md  SPEC.md
src/: App.svelte  app.css  app.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  db.rs  lib.rs  main.rs
src-tauri/src/llm/: anthropic.rs  mod.rs  ollama.rs  openai_compat.rs
src-tauri/src/stt/: cloud.rs  mod.rs  sensevoice.rs  whisper_local.rs
src/lib/: api.ts
src/routes/: Checkin.svelte  Home.svelte  Settings.svelte
